[gd_scene load_steps=8 format=3 uid="uid://dnqm078csxa2b"]

[ext_resource type="Script" path="res://Turret/turret.gd" id="1_5jorw"]
[ext_resource type="PackedScene" uid="uid://barktk7dao66h" path="res://Turret/projectile.tscn" id="2_2r7g7"]

[sub_resource type="CylinderMesh" id="CylinderMesh_5xtld"]
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_t7wxi"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_bu5ad"]
top_radius = 0.3
bottom_radius = 0.4
height = 0.3

[sub_resource type="SphereMesh" id="SphereMesh_lsqme"]
radius = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_xfoui"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[node name="Turret" type="Node3D"]
script = ExtResource("1_5jorw")
projectile = ExtResource("2_2r7g7")

[node name="TurretBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_5xtld")

[node name="TurretTop" type="MeshInstance3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("CylinderMesh_t7wxi")

[node name="TurretHead" type="MeshInstance3D" parent="TurretBase/TurretTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_bu5ad")

[node name="TurretCap" type="MeshInstance3D" parent="TurretBase/TurretTop/TurretHead"]
mesh = SubResource("SphereMesh_lsqme")

[node name="Cannon" type="MeshInstance3D" parent="TurretBase/TurretTop/TurretHead"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.15, 0, 0.5)
mesh = SubResource("CylinderMesh_xfoui")

[node name="Cannon2" type="MeshInstance3D" parent="TurretBase/TurretTop/TurretHead"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.15, 0, 0.5)
mesh = SubResource("CylinderMesh_xfoui")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
